<resources>
    <string name="app_name">Điểm danh BK</string>
    <string name="table_header">STT</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="password_confirmation">Xác nhận mật khẩu</string>
    <string name="password_forgot">Quên mật khẩu?</string>
    <string name="password_recover_confirmation">Lấy lại mật khẩu</string>
    <string name="required">Bắt buộc</string>
    <string name="invalid_email">Email không hợp lệ</string>
    <string name="short_password">Mật khẩu cần ít nhất 6 ký tự</string>
    <string name="wrong_information">Vui lòng nhập chính xác các thông tin</string>
    <string name="failed_password_confirmation">Mật khẩu xác nhận sai.</string>
    <string name="name">Họ tên</string>
    <string name="successful_registration">Đăng ký tài khoản thành công</string>
    <string name="failed_registration">Đăng ký thất bại</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="logout">Đăng xuất</string>
    <string name="profile">Hồ sơ</string>
    <string name="successful_login">Đăng nhập thành công</string>
    <string name="role">Vai trò</string>
    <string name="student">Sinh viên</string>
    <string name="teacher">Giáo viên</string>
    <string name="cancel">Hủy</string>
    <string name="ok">OK</string>
    <string name="add_class">Thêm lớp học</string>
    <string name="add_class_id">Nhập ID cho lớp</string>
    <string name="no_class">Không có lớp mã</string>
    <string name="class_added">Đã thêm lớp học</string>
    <string name="class_id">Mã số lớp</string>
    <string name="class_title">Tên lớp</string>
    <string name="description">Mô tả</string>
    <string name="time_limit">Giới hạn thời gian</string>
    <string name="minute">phút</string>
    <string name="delete_class">Xóa lớp</string>
    <string name="class_explanation">Các thông số của lớp:\n • Mã số lớp: mã số để sinh viên có thể thêm lớp.\n • Tên lớp: Tên lớp.\n • Mô tả: Thông tin mô tả lớp.\n • Giới hạn thời gian: Giới hạn thời gian điểm danh của mỗi buổi học.</string>
    <string name="confirm">Xác nhận</string>
    <string name="class_existed">ID của lớp đã tồn tại</string>
    <string name="edit_class">Thay đổi thông tin lớp</string>
    <string name="delete_class_confirmation">Xác nhận xóa lớp?</string>
    <string name="session_created">Đã tạo tiết học mới</string>
    <string name="create_session_confirmation">Xác nhận tạo tiết học</string>
    <string name="photo">Ảnh</string>
    <string name="student_id">MSSV</string>
    <string name="camera_request_message">Ứng dụng cần quyền sử dụng Camera</string>
    <string name="roll_call_failed">Điểm danh thất bại</string>
    <string name="roll_call_successful">Điểm danh thành công</string>
    <string name="wrong_student_id">Sai mã số sinh viên</string>
    <string name="missing_info">Vui lòng nhập đủ thông tin</string>
    <string name="email_recover_sent">Đã gửi email khôi phục</string>
    <string name="profile_update_failed">Cập nhật thông tin thất bại</string>
    <string name="profile_update_success">Cập nhật thông tin thành công</string>
    <string name="absence_detail">Chi tiết vắng:</string>
    <string name="student_count">Số học sinh</string>
    <string name="one">1</string>
    <string name="_2">2</string>
    <string name="three_plus">3+</string>
    <string name="statistics">Thông số lớp</string>
    <string name="session_count">Số buổi học</string>
    <string name="image_loading_failed">Tải ảnh thất bại</string>

    <string-array name="role">
        <item>Sinh viên</item>
        <item>Giáo viên</item>
    </string-array>
</resources>