<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".fragment.StatisticFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        tools:context=".fragment.StatisticFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:padding="16dp"
                android:layout_height="wrap_content"
                android:text="@string/class_title"/>
            <TextView
                android:layout_width="wrap_content"
                android:padding="16dp"
                android:layout_height="wrap_content"
                android:text="@string/student_count"/>
            <TextView
                android:layout_width="wrap_content"
                android:padding="16dp"
                android:layout_height="wrap_content"
                android:text="@string/session_count"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/tv_class_name"
                android:padding="16dp"
                android:layout_height="wrap_content"
                tools:text="Hello"/>
            <TextView
                android:layout_width="wrap_content"
                android:padding="16dp"
                android:id="@+id/tv_student_count"
                android:layout_height="wrap_content"
                tools:text="Hello"/>
            <TextView
                android:layout_width="wrap_content"
                android:padding="16dp"
                android:id="@+id/tv_session_count"
                android:layout_height="wrap_content"
                tools:text="Hello"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:padding="16dp"
        android:layout_height="wrap_content"
        android:text="@string/absence_detail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/one"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_one"
            android:padding="16dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/_2"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_two"
            android:padding="16dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/three_plus"/>
        <TextView
            android:id="@+id/tv_three"
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>

