<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    tools:context=".fragment.ProfileReadFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/student_id"/>
        <TextView
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_name"
            android:padding="16dp"
            android:layout_height="wrap_content"
            tools:text="Hello"/>
        <TextView
            android:layout_width="wrap_content"
            android:padding="16dp"
            android:id="@+id/tv_student_id"
            android:layout_height="wrap_content"
            tools:text="Hello"/>
        <TextView
            android:layout_width="wrap_content"
            android:id="@+id/tv_email"
            android:padding="16dp"
            android:layout_height="wrap_content"
            tools:text="Hello"/>

    </LinearLayout>



</LinearLayout>