<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RollCallFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_submit"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/class_title" />

            <TextView
                android:id="@+id/tv_class"
                tools:text="Physics"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/button_scan_id"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:id="@+id/tv_ms"
                android:padding="16dp"
                android:text="@string/student_id" />

            <TextView
                android:id="@+id/tv_student_id_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/img_next1"
                android:layout_toEndOf="@+id/tv_ms"
                android:padding="16dp"
                tools:text="00000000" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:id="@+id/img_next1"
                android:layout_marginEnd="16dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/confirm"
                android:src="@drawable/ic_baseline_navigate_next_24" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/button_take_photo"
            android:background="?android:attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/photo"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="16dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/confirm"
                android:src="@drawable/ic_baseline_navigate_next_24" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/img_view_photo_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/confirm"
        app:icon="@drawable/ic_baseline_check_24" />
</RelativeLayout>